# selleron

./: .env.sample  .gitignore  README.md  db.json  pyproject.toml
bids/: models.py  serializers.py  urls.py  views.py
bids/migrations/: 0001_initial.py
config/: settings.py  urls.py
users/migrations/: 0001_initial.py
